--- a/Website/src/css/app.css
+++ b/Website/src/css/app.css
@@ -22,3 +22,32 @@ body {
     Color:#fff;
     text-align: center
 }
+
+.icon-addon {
+    position: relative;
+    display: block;
+}
+
+.icon-addon.addon-md .glyphicon,
+.icon-addon .glyphicon, 
+.icon-addon.addon-md .fa,
+.icon-addon .fa {
+    position: absolute;
+    z-index: 2;
+    right: 10px;
+    font-size: 14px;
+    width: 20px;
+    margin-right: -2.5px;
+    text-align: center;
+    padding: 10px 0;
+    top: 1px
+}
+
+input[type='number'] {
+    -moz-appearance:textfield;
+}
+
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+}
